pamc/src/tests/sample_code/should_fail/ast_simplification/labeled_params/explicit_underscore_label.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun _(_~x: Nat): Nat {
    Nat.O
};
